5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1692_1101.log
== TEST (2019-04-29 23:31:52) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R ou I ou C: ")
tipo=tipo.upper()
print("Entradas: " + consumo "kwh" + "e" + tipo)
if tipo=="R":
elif(consumo>=500):
	msg=consumo*0.44
	print("Valor toral: R$ ")

-- ERROR:
File "XXXX", line 4
    print("Entradas: " + consumo "kwh" + "e" + tipo)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:33:08) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R ou I ou C: ")
tipo=tipo.upper()
print("Entradas: " + consumo "kwh" + "e" + tipo)
if tipo=="R" consumo>=500:
	msg=consumo*0.44
	print("Valor toral: R$ ")

-- ERROR:
File "XXXX", line 4
    print("Entradas: " + consumo "kwh" + "e" + tipo)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:33:32) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R ou I ou C: ")
tipo=tipo.upper()
print("Entradas: " , consumo "kwh" , "e" + tipo)
if tipo=="R" consumo>=500:
	msg=consumo*0.44
	print("Valor toral: R$ ")

-- ERROR:
File "XXXX", line 4
    print("Entradas: " , consumo "kwh" , "e" + tipo)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:33:57) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R ou I ou C: ")
tipo=tipo.upper()
if tipo=="R" consumo>=500:
	msg=consumo*0.44
	print("Valor toral: R$ ")

-- ERROR:
File "XXXX", line 4
    if tipo=="R" consumo>=500:
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:34:13) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R ou I ou C: ")
tipo=tipo.upper()
print("Entradas: " , consumo "kwh" , "e" + tipo)
if(tipo=="R" consumo>=500):
	msg=consumo*0.44
	print("Valor toral: R$ ")

-- ERROR:
File "XXXX", line 4
    print("Entradas: " , consumo "kwh" , "e" + tipo)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:58:39) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R ou I ou C: ")
tipo=tipo.upper()
print("Entradas: " , consumo "kwh" , "e" + tipo)
if(tipo=="R" consumo>=500):
	msg=consumo*0.44
	print("Valor toral: R$ ")

-- ERROR:
File "XXXX", line 4
    print("Entradas: " , consumo "kwh" , "e" + tipo)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:59:23) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R ou I ou C: ")
tipo=tipo.upper()
print("Entradas: " , consumo "kwh e tipo" + tipo)
if(tipo=="R" consumo>=500):
	msg=consumo*0.44
	print("Valor toral: R$ ")

-- ERROR:
File "XXXX", line 4
    print("Entradas: " , consumo "kwh e tipo" + tipo)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:01:31) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas: "+ consumo + "kwh e tipo" + tipo)
if(tipo=="R" consumo>=500):
	msg=consumo*0.44
	print("Valor toral: R$ ")

-- ERROR:
File "XXXX", line 5
    if(tipo=="R" consumo>=500):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:03:45) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas: "+ consumo + "kwh e tipo" + tipo)
if(tipo=="R") and (consumo>=500):
	msg=consumo*0.44
	print("Valor toral: R$ ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Entradas: "+ consumo + "kwh e tipo" + tipo)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:04:32) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas: ", consumo, " kwh e tipo ",tipo)
if(tipo=="R") and (consumo>=500):
	msg=consumo*0.44
	print("Valor toral: R$ ")

-- OUTPUT:
Entradas:  -56.0  kwh e tipo  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:06:27) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas: ", consumo, " kwh e tipo ",tipo)
if(tipo=="R") and (consumo>=500):
	msg=consumo*0.44
	print("Valor toral: R$ ", consumo)

-- OUTPUT:
Entradas:  -56.0  kwh e tipo  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:07:47) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas: ", consumo, " kwh e tipo ",tipo)
if(tipo=="R") and (consumo>=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(consumo,2))

-- OUTPUT:
Entradas:  -56.0  kwh e tipo  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:08:40) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas: ", consumo, " kwh e tipo ",tipo)
if(tipo=="R") and (consumo>=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(consumo,2))
	

-- OUTPUT:
Entradas:  -56.0  kwh e tipo  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:09:02) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas: ", consumo, " kwh e tipo ",tipo)
if(tipo=="R") and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(consumo,2))
	

-- OUTPUT:
Entradas:  -56.0  kwh e tipo  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:10:15) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas: ", consumo, " kwh e tipo ",tipo)
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(consumo,2))
	

-- OUTPUT:
Entradas:  -56.0  kwh e tipo  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:14:29) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas: ", consumo, " kWh e tipo ",tipo)
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(consumo,2))
	
	

-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:17:37) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas: ", consumo, " kWh e tipo ",tipo)
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(consumo,2))
else:
	print("Dados Invalidos")
	
	

-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados Invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:20:40) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
tipo=tipo.upper()
print("Entradas: ", consumo, " kWh e tipo ",tipo)
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(consumo,2))
else:
	print("Dados Invalidos")
	
	

-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados Invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:21:14) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas: ", consumo, " kWh e tipo ",tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(consumo,2))
else:
	print("Dados Invalidos")
	
	

-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados Invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:22:15) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas: ", consumo, " kWh e tipo ",tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(consumo,2))
else:
	print("Dados Invalidos")
	
	

-- EXECUTION TIME:
0.16542
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Dados Invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor toral: R$  955.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:27:29) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas: ", consumo, " kWh e tipo ",tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados Invalidos")
	
	

-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados Invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:27:39) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas: ", consumo, " kWh e tipo ",tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados Invalidos")
	
	

-- EXECUTION TIME:
0.184353
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Dados Invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:27:42) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas: ", consumo, " kWh e tipo ",tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados Invalidos")
	
	

-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados Invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:28:27) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas: ",consumo," kWh e tipo ",tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados Invalidos")
	
	

-- EXECUTION TIME:
0.15871
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Dados Invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:28:56) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas: ",consumo," kWh e tipo ",tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.253172
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:29:52) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas: ",consumo, "kWh e tipo", tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.222659
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:29:55) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas: ",consumo, "kWh e tipo", tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:30:27) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas: ",consumo, "kWh e tipo", tipo)
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.24826
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:31:04) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.157372
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:31:05) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.170592
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:31:58) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo)
tipo=tipo.upper()
if(tipo.upper()=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo.upper()=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.226617
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:31:59) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo)
tipo=tipo.upper()
if(tipo.upper()=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo.upper()=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.145773
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:32:00) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo)
tipo=tipo.upper()
if(tipo.upper()=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo.upper()=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.144116
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:32:00) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo)
tipo=tipo.upper()
if(tipo.upper()=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo.upper()=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.114241
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:32:28) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo)
if(tipo.upper()== "R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()== "R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()== "C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()== "C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo.upper()== "I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo.upper()== "I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.15687
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:32:41) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo)
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:33:20) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo.upper())
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.204858
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:33:22) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo.upper())
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.161769
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor toral: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:33:22) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo.upper())
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$ ",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$ ",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:34:04) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo.upper())
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.156724
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor toral: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:34:06) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo.upper())
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor toral: R$",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor toral: R$",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor toral: R$",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor toral: R$",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor toral: R$",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor toral: R$",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:36:43) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo.upper())
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor total: R$",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor total: R$",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor total: R$",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor total: R$",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor total: R$",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor total: R$",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.18404
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:38:28) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo.upper())
tipo=tipo.upper()
if(tipo=="R") and (consumo<=500):
	msg= consumo*0.44
	print("Valor total: R$",round(msg,2))
elif(tipo=="R") and (consumo>500):
	msg= consumo*0.65
	print("Valor total: R$",round(msg,2))
elif(tipo=="C")  and (consumo<=1000):
	msg= consumo*0.55
	print("Valor total: R$",round(msg,2))
elif(tipo=="C") and (consumo>1000):
	msg= consumo*0.60
	print("Valor total: R$",round(msg,2))
elif(tipo=="I") and (consumo<=5000):
	msg= consumo*0.55
	print("Valor total: R$",round(consumo,2))
elif(tipo=="I") and (consumo>5000):
	msg= consumo*0.60
	print("Valor total: R$",round(msg,2))
else:
	print("Dados invalidos")
	
	

-- EXECUTION TIME:
0.216094
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -56.0
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:38:44) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo.upper())
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor total: R$",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor total: R$",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor total: R$",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor total: R$",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor total: R$",round(consumo,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor total: R$",round(msg,2))
else:
	print("Dados invalidos")
	
	
	

-- EXECUTION TIME:
0.162349
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:05:09) 
-- CODE:
consumo=float(input("consumo de energia: "))
tipo=input("instalacao R, I ou C: ")
print("Entradas:",consumo, "kWh e tipo", tipo.upper())
tipo=tipo.upper()
if(tipo=="R") and (consumo>0) and (consumo<=500):
	msg= consumo*0.44
	print("Valor total: R$",round(msg,2))
elif(tipo=="R") and (consumo>0) and (consumo>500):
	msg= consumo*0.65
	print("Valor total: R$",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo<=1000):
	msg= consumo*0.55
	print("Valor total: R$",round(msg,2))
elif(tipo=="C") and (consumo>0) and (consumo>1000):
	msg= consumo*0.60
	print("Valor total: R$",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo<=5000):
	msg= consumo*0.55
	print("Valor total: R$",round(msg,2))
elif(tipo=="I") and (consumo>0) and (consumo>5000):
	msg= consumo*0.60
	print("Valor total: R$",round(msg,2))
else:
	print("Dados invalidos")
	
	
	

-- EXECUTION TIME:
0.236916
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
